    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
  3-Mar-2003 1.5.2
Acknowledgements:
    Thanks to John Sinclair for noting the lack of line breaks in manifest.mf and proposing a fix
    Thanks to Bernhard Wagner for simplifying some string comparison code in ParsedHTML and WebTable
    Thanks to Bernhard Wagner for adding some parser customization code.
    Thanks to James Howe for noting the mispelling of the getElementById method
    Thanks to Alex Beggs for noting the mishandling of non-JavaScript scripts and providing a test case.
    Thanks to Navid Vahdat for ServletUnit fixes for invalid session handling and request dispatcher paths
    Thanks to Daniel Sheppard for identifying a problem with meta refresh tags.
    Thanks to Daniel Sheppard for correcting the return status for HttpServletResponse.sendRedirect
    Thanks to Daniel Sheppard, Navid Vahdat, and Ron Hanson for help in adding capabilities to the RequestDispatcher implementation.
    Thanks to Ron Hanson for catching the obsolete behavior of HttpServletRequest.setAttribute.
    Thanks to Raphael Corre for improving logger of transmitted headers
    Thanks to Jason Bedell for supplying an implementation for HttpSession.getValueNames.
    Thanks to Jianqin Qu for finding the getTableStartingWithPrefix bug when using NekoHTML
    Thanks to Scott Fleischman for providing tests for missing frame handling functionality
    Thanks to Artashes Aghajanyan for implementing error reporting for the NekoHTML parser

Problems Fixed:
    Packaging
        1. The manifest.mf file now has line breaks between properties
    Content and Parsing