@@ -2,7 +2,7 @@ package com.meterware.httpunit.javascript;
 /********************************************************************************************************************
  * $Id$
  *
- * Copyright (c) 2002, Russell Gold
+ * Copyright (c) 2002-2003, Russell Gold
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
  * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
@@ -40,6 +40,7 @@ public class JavaScriptTestSuite {
         result.addTest( ScriptingTest.suite() );
         result.addTest( DocumentScriptingTest.suite() );
         result.addTest( FormScriptingTest.suite() );
+        result.addTest( FrameScriptingTest.suite() );
         result.addTest( HTMLElementTest.suite() );
         return result;
     }
